# ZohoVideoRenamer

./: .gitignore  LICENSE  README.md  cleanup.command  diagnose-crash.command  force-push.command  just-push.command  launcher.py  push-docs-update.command  push-landing-v0.2.0.command  push-security-png.command  push-update.command  pyproject.toml  release-v0.1.1.command  release-v0.1.2.command  release-v0.1.3.command  release-v0.1.4.command  release-v0.1.5.command  release-v0.1.6.command  release-v0.1.7.command  release-v0.1.8.command  release-v0.1.9.command  release-v0.2.0.command  release.command  requirements.txt  setup-and-push.command  setup-and-push.sh  swap-logo-and-rerelease.command
.github/workflows/: build.yml  pages.yml
docs/: architecture.md  index.html
docs/assets/: README.md  logo.icns
examples/: .env.example
zoho_video_renamer/: __init__.py  apply.py  cli.py  embedded.py  gui.py  matcher.py  naming.py  thumbnailer.py  ui.py  undo.py
zoho_video_renamer/ai/: __init__.py  anthropic.py  base.py  openai.py
