[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zoho-video-renamer"
version = "0.2.0"
description = "Match videos to source stills, propose descriptive names (via AI or existing still names), and bulk-rename — with a browser review UI and full undo support."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "ZohoVideoRenamer contributors" }
]
keywords = ["video", "rename", "ffmpeg", "ai", "vision", "batch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
dependencies = [
    "Pillow>=9.0",
    # imageio-ffmpeg bundles a static ffmpeg binary so the desktop app works
    # without requiring users to `brew install ffmpeg`.
    "imageio-ffmpeg>=0.4.9",
    # pywebview gives us a native webview window on macOS (WKWebView), Windows
    # (WebView2), and Linux (GTK). The whole UI — form + review — lives inside
    # the app's own window. No external browser, no file-export dance.
    "pywebview>=5.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.50.0"]
all = ["anthropic>=0.40.0", "openai>=1.50.0"]

[project.urls]
Homepage = "https://github.com/princezoho/ZohoVideoRenamer"
Issues = "https://github.com/princezoho/ZohoVideoRenamer/issues"

[project.scripts]
zoho-video-renamer = "zoho_video_renamer.cli:main"

[project.gui-scripts]
zoho-video-renamer-gui = "zoho_video_renamer.gui:main"

[tool.setuptools.packages.find]
include = ["zoho_video_renamer*"]
